testsuite/tests/grammar/invalid_abstract_fields/free-standing-null-field.lkt
grammar foo_grammar {
    @main_rule main_rule <- ExampleHolder(Example("example"))
}
